--- a/signup.html
+++ b/signup.html
@@ -49,19 +49,19 @@
   <body class="text-center">
     
 <main class="form-signin">
-  <form>
+  <form action="/" method="post">
     <img class="mb-4" src="images/logo.png" alt="" width="100" height="90">
     <h1 class="h3 mb-3 fw-normal">Signup To My Newsletter</h1>
 
     <div class="form-floating">
-      <input type="text" class="form-control top"  placeholder="First Name"  required autofocus>
+      <input type="text" class="form-control top" name="fName" placeholder="First Name"  required autofocus>
     </div>
     <div class="form-floating">
-      <input type="text" class="form-control middle"  placeholder="Last Name" required>
+      <input type="text" class="form-control middle" name="lName" placeholder="Last Name" required>
     </div>
 
     <div class="form-floating">
-      <input type="email" class="form-control bottom"  placeholder="Email Address" required>
+      <input type="email" class="form-control bottom" name="emailAddress" placeholder="Email Address" required>
     </div>
    
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Me Up</button>
