--- a/signup.html
+++ b/signup.html
@@ -59,10 +59,16 @@
     <div class="form-floating">
       <input type="text" class="form-control middle" name="lName" placeholder="Last Name" required>
     </div>
-
+    <div class="form-floating">
+        <input type="date" class="form-control middle" name="birth" placeholder="Enter your Birthday" required>
+      </div>
+    <div class="form-floating">
+        <input type="number" class="form-control middle" name="mobile" placeholder="Enter Your Mobile Number" required>
+      </div>  
     <div class="form-floating">
       <input type="email" class="form-control bottom" name="emailAddress" placeholder="Email Address" required>
     </div>
+   
    
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Me Up</button>
     <p class="mt-5 mb-3 text-muted">&copy; mv2022</p>
